@@ -1,6 +1,6 @@
 /* GCVideo DVI Firmware
 
-   Copyright (C) 2015-2018, Ingo Korb <ingo@akana.de>
+   Copyright (C) 2015-2019, Ingo Korb <ingo@akana.de>
    All rights reserved.
 
    Redistribution and use in source and binary forms, with or without
@@ -80,7 +80,7 @@ void screen_about(void) {
       osd_putsat(14, 11, "GCVideo DVI v" VERSION);
     }
   }
-  osd_putsat(12, 13, "Copyright \013 2015-2018");
+  osd_putsat(12, 13, "Copyright \013 2015-2019");
   osd_putsat(16, 14, "by Ingo Korb");
   osd_putsat(15, 15, "ingo@akana.de");
   osd_gotoxy(14, 17);
